[package]
name = "html2runes"
version = "1.0.1"
authors = ["Jonas Kalderstam <jonas@cowboyprogrammer.org>"]
description = "A HTML to Text converter program written in Rust."
homepage = "https://github.com/spacecowboy/html2runes"
repository = "https://github.com/spacecowboy/html2runes"
readme = "README.md"
keywords = ["html", "plaintext", "converter", "markdown"]
categories = ["parsing", "text-processing"]
license = "MIT"

[dependencies]
clap = "2.25"
html5ever = "0.18"

[badges.travis-ci]
repository = "spacecowboy/html2runes"
branch = "master"

[[bin]]
path = "src/main.rs"
name = "html2runes"
