[package]
authors = ["Jonas Kalderstam <jonas@cowboyprogrammer.org>"]
categories = [
    "parsing",
    "text-processing",
]
description = "A HTML to Text converter program written in Rust."
homepage = "https://github.com/spacecowboy/html2runes"
keywords = [
    "html",
    "plaintext",
    "converter",
    "markdown",
]
license = "MIT"
name = "html2runes"
readme = "README.md"
repository = "https://github.com/spacecowboy/html2runes"
version = "1.0.1"

[[bin]]
name = "html2runes"
path = "src/main.rs"
[badges.travis-ci]
branch = "master"
repository = "spacecowboy/html2runes"

[dependencies]
clap = "2.27.1"
html5ever = "0.21.0"
