[package]
name = "html2runes"
version = "1.0.0"
authors = ["Jonas Kalderstam <jonas@cowboyprogrammer.org>"]
description = "An HTML to Text converter."
homepage = "https://gitlab.com/spacecowboy/html2runes"
repository = "https://gitlab.com/spacecowboy/html2runes"
readme = "README.md"
keywords = ["html", "plaintext", "converter", "markdown"]
categories = ["parsing", "text-processing"]
license = "MIT"

[dependencies]
clap = "~2.20.5"
html5ever = "~0.13.0"
html5ever-atoms = "~0.2.0"
tendril = "~0.2.3"

[badges.travis-ci]
repository = "spacecowboy/html2runes"
branch = "master"

[[bin]]
path = "src/main.rs"
name = "html2runes"
